	Fixed slapd AVA_Sort on multivalued RDNs (ITS#5057)
	Fixed slapd integer/pointer types and overflow (ITS#5035)
	Fixed slapd select_backend/ManageDSAit (ITS#4986)
	Fixed slapd-bdb missing index warning (ITS#5037)
	Fixed slapd-bdb Quick index for ID 0 (ITS#5052)
	Fixed slapo-syncprov uninit'd vars (ITS#5048,#5049)
	Fixed libldap ldap_add_result_entry (ITS#5056)
	Removed lint

OpenLDAP 2.3.37 Release (2007/07/20)
	Fixed slapd-glue/syncprov interaction (ITS#4623)
	Fixed slapd-ldap search reference crash (ITS#5025)
	Fixed slapd-ldbm crash on Compare op (ITS#5044)
	Fixed slapo-rwm searchFilter double free (ITS#5043)
	Clarified slapd-perl SampleLDAP.pm usage (ITS#4995)
	Documentation
		Fixed slapd.conf(5) for default loglevel (ITS#5027)

OpenLDAP 2.3.36 Release (2007/06/17)
	Fixed slapd error code on Windows (ITS#4945, #4606)
	Fixed slapd mutex bug after failed startup (ITS#4957)
	Fixed slapd sasl failed Bind bug (ITS#4954)
	Fixed slapd sasl ssf logging (ITS#5001)
	Fixed slapd tool op init (ITS#4911)
	Fixed slapd-bdb no-op crasher (ITS#4925)
	Fixed slapd-config olcLogLevel (ITS#4949)
	Fixed slapd-config olcModuleLoad replace (ITS#4921,ITS#4923)
	Fixed slapd-relay crash when no database can be selected (ITS#4958)
	Fixed slapo-chain RFC3062 passwd exop handling (ITS#4964)
	Fixed slapo-dynlist multiple group/url[/member] config (ITS#4989)
	Fixed slapo-pcache handling of abandoned Operations (#5015)
	Fixed slapo-pcache and -rwm interaction (ITS#4991)
	Fixed slapo-ppolicy pwdReset/pwdMinAge (ITS#4970)
	Fixed slapo-ppolicy control cleanup from ITS#4665
	Fixed slapo-syncprov cookie parsing error (ITS#4977)
	Fixed slapo-valsort crash on delete op (ITS#4966)
	Fixed liblber compilation problem (ITS#5007)
	Fixed libldap referral chasing loop (ITS#4955)
	Fixed libldap response code handling on rebind (ITS#4924)
	Fixed libldap SASL_MAX_BUFF_SIZE (ITS#4935)
	Fixed libldap cldap assert (ITS#4992)
	Fixed libldap_r thread debug issues (ITS#4972)